# br

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  crates.js  help.html  one.fasta  one_description.md  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: main.yml
br/: all.html  enum.CorrectionMethod.html  fn.build_methods.html  fn.run_correction.html  fn.set_nb_threads.html  index.html  sidebar-items.js
br/cli/: enum.AbundanceSelection.html  enum.CorrectionMethod.html  enum.LargeKmerInput.html  enum.SolidInput.html  enum.SubCommand.html  fn.check_params.html  fn.i82level.html  fn.read_or_compute_solidity.html  fn.u82level.html  index.html  sidebar-items.js  struct.Command.html  struct.Count.html  struct.Fasta.html  struct.LargeKmer.html  struct.Solid.html
br/correct/: index.html  sidebar-items.js  trait.Corrector.html
br/correct/exist/: index.html  sidebar-items.js  struct.Exist.html  trait.Scenario.html
br/correct/exist/one/: enum.ScenarioOne.html  index.html  sidebar-items.js  struct.ScenarioOneIter.html  type.One.html
br/correct/exist/two/: enum.ScenarioTwo.html  index.html  sidebar-items.js  struct.ScenarioTwoIter.html  type.Two.html
br/correct/gap_size/: index.html  sidebar-items.js  struct.GapSize.html
br/correct/graph/: index.html  struct.Graph.html
br/correct/greedy/: index.html  sidebar-items.js  struct.Greedy.html
br/correct/one/: index.html  sidebar-items.js  struct.One.html
br/correct/two/: index.html  sidebar-items.js  struct.Two.html
br/error/: enum.Cli.html  enum.Error.html  enum.IO.html  index.html  sidebar-items.js  type.Result.html
br/set/: index.html  sidebar-items.js  trait.KmerSet.html  type.BoxKmerSet.html
br/set/hash/: index.html  struct.Hash.html
br/set/pcon/: index.html  sidebar-items.js  struct.Pcon.html
br_large/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Command.html
implementors/br/correct/: trait.Corrector.js
implementors/clap/derive/: trait.Args.js  trait.Clap.js  trait.FromArgMatches.js  trait.IntoApp.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/strum/: trait.IntoEnumIterator.js
src/: cli.rs  correct.rs  error.rs  io.rs  lib.rs  main.rs  set.rs
src/br/: cli.rs.html  error.rs.html  lib.rs.html  set.rs.html
src/br/correct/: gap_size.rs.html  graph.rs.html  greedy.rs.html  mod.rs.html  one.rs.html  two.rs.html
src/br/correct/exist/: mod.rs.html  one.rs.html  two.rs.html
src/br/set/: hash.rs.html  mod.rs.html  pcon.rs.html
src/br_large/: br_large.rs.html
src/correct/: gap_size.rs  graph.rs  greedy.rs  mod.rs  one.rs  two.rs
src/correct/exist/: mod.rs  one.rs  two.rs
src/set/: hash.rs  mod.rs  pcon.rs
tests/: br.rs  br_large.rs
tests/data/: raw.fasta  raw.k11.a2.solid
trait.impl/br/correct/: trait.Corrector.js
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js  trait.Subcommand.js  trait.ValueEnum.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/strum/: trait.IntoEnumIterator.js
type.impl/alloc/boxed/: struct.Box.js
type.impl/anyhow/: type.Result.js
type.impl/br/correct/exist/: struct.Exist.js
(+6 files in other folders)
