[package]
name = "br"
description = "Brut Rewriting"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"


[lib]
name = "br"
crate-type = ["rlib", "cdylib", "staticlib"]


[dependencies]
bio            = "0.39"
rustc-hash     = "1"
strum          = "0.22"
strum_macros   = "0.22"
cocktail       = { git = "https://github.com/natir/cocktail.git" }
pcon	       = { git = "https://github.com/natir/pcon.git" }

# parallel
rayon          = "1"

# input output management
niffler	       = { version = "2", features = ["bz2", "lzma", "gz"] }

# CLI management
clap           = "3"

# Logging and error management
log 	       = "0.4"
anyhow         = "1"
thiserror      = "1"
env_logger     = "0.9"


[dev-dependencies]
tempfile       = "3"
rand           = { version = "0.8", features = ["small_rng"] }

[profile.release]
debug = true # uncomment for profiling
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false